[project]
name = "recmeet"
version = "0.2.0"
description = "Record, transcribe, and summarize meetings"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tray = ["PyGObject>=3.42.0"]

[project.scripts]
recmeet = "recmeet:main"
recmeet-tray = "recmeet_tray:main"
